--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "debug": "^2.1.1",
+    "fibers": "^1.0.5",
     "node-jsx": "^0.12.4",
     "path": "^0.11.14",
     "react": "^0.12.2",
+    "react-async": "^2.0.1",
     "react-router": "^0.12.0",
     "react-tools": "^0.12.2",
     "webpack": "^1.5.3"
