--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "script/run"
   },
   "dependencies": {
+    "ascii-json": "^0.2.0",
     "body-parser": "^1.11.0",
     "cookie-parser": "^1.3.3",
     "debug": "^2.1.1",
     "express": "^4.11.2",
+    "express-session": "^1.10.3",
     "fibers": "^1.0.5",
     "jsx-loader": "^0.12.2",
     "morgan": "^1.5.1",
