--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ascii-json": "^0.2.0",
     "body-parser": "^1.11.0",
     "cookie-parser": "^1.3.3",
+    "cuid": "^1.2.4",
     "debug": "^2.1.1",
     "express": "^4.11.2",
     "express-session": "^1.10.3",
